--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>5.12.0</version>
+      <artifactId>mockito-inline</artifactId>
+      <version>4.4.0</version>
       <scope>test</scope>
     </dependency>
 
